--- a/package.json
+++ b/package.json
@@ -12,5 +12,11 @@
     "next": "14.2.21",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.28.0",
+    "eslint": "^9.28.0",
+    "eslint-config-next": "15.3.3",
+    "globals": "^16.2.0"
   }
 }
